# illustrated-japanese-words-and-conversations-for-every-day

./: .editorconfig  .gitignore  .gitmodules  Claude.md  main.py  pyproject.toml
.claude/: settings.json
knowledge/data/: book_structure.json
knowledge/data/topic_01_cultural_festival/: unit_01.json  unit_02.json
