[project]
name = "japanese-anki"
version = "0.1.0"
description = "生活情景日语图解大百科 Anki 卡片"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["cchooks>=0.1.5", "genanki>=0.13.1"]

[dependency-groups]
dev = ["ruff>=0.8.4"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".claude", "genanki", "knowledge"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
